[tool.poetry]
name = "quri-parts-qsci"
version = "0.1.0"
description = ""
authors = ["QunaSys"]
readme = "README.md"
packages = [
    { include = "quri_parts_qsci" }
]

[tool.poetry.dependencies]
python = "^3.9.8, >=3.10"
quri-parts-core = "*"
quri-parts-circuit = "*"
quri-parts-algo = "*"
quri-parts-chem = "*"
quri-parts-qulacs = "*"

[tool.poetry.group.lint.dependencies]
black = "^23.10.0"
flake8 = "^6.0.0"
# Exclude docformatter 1.6.0 to avoid this issue: https://github.com/PyCQA/docformatter/issues/161
docformatter = "^1.4,<1.6.0"
isort = "^5.12.0"

[tool.poetry.group.typecheck.dependencies]
mypy = ">=0.950"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.1,<9.0.0"

[tool.poetry.group.doc.dependencies]
Sphinx = ">=4.4,<8.0"
furo = ">=2022.2.23,<2024.0.0"
sphinx-autobuild = "^2021.3.14"
nbsphinx = ">=0.8.9,<0.10.0"
ipython = "^8.4.0"
notebook = ">=6.4.12,<8.0.0"
myst-parser = ">=0.18.1,<2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
